--- a/public/styles.css
+++ b/public/styles.css
@@ -52,3 +52,9 @@ body {
   .margin-left{
     margin-left: 80px;
   }
+  
+  .posistion-right{
+    position: absolute;
+    top: 0;
+    right:0;
+  }
