--- a/public/styles.css
+++ b/public/styles.css
@@ -34,8 +34,8 @@ body {
     background-color: #6D5F2A;
     color: white;
     font-family: "Karla";
-    font-size: 19px;
-    font-weight: 200;
+    font-size: 18px;
+    font-weight: 100;
     border: none;
   }
 
@@ -44,8 +44,8 @@ body {
     
     background-color: rgba(5, 5, 5, 0.42);
     font-family: "Inria Serif";
-    font-weight: 200;
-    font-size: 19px;
+    font-weight: 100;
+    font-size: 18px;
     color: white;
   }
 
@@ -57,4 +57,36 @@ body {
     position: absolute;
     top: 0;
     right:0;
+  }
+
+  .logo{
+    width: 15%;
+  }
+
+  .navbar-item{
+    width: 200px;
+   
+    text-align: center;
+    color: white;
+    
+  }
+
+  .right-border{
+    width: 1px;
+    height: 50px;
+    background-color:white ;
+  }
+
+  .logIn-btn{
+    width: 130px;
+    height: 40px;
+    border-radius: 12px;
+    border: 1px solid #BEB985;
+    background-color: transparent;
+    text-align: center;
+    line-height: 20px;
+    font-family: "Karla";
+    font-weight: 100;
+    font-size: 16px ;
+
   }
