--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("images/backgrounImg.jpg");
+    background-image: url("../src/images/backgrounImg.jpg");
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -7,7 +7,8 @@ body {
   }
 
   div.height{
-    height: 100vh;
+    height: auto;
+    padding-top: 100px;
   }
   
   h1.main-text{
@@ -40,6 +41,8 @@ body {
   }
 
   .navigation-home{
+    position: fixed;
+    z-index: 1000;
     width: 100vw;
     
     background-color: rgba(5, 5, 5, 0.42);
@@ -89,4 +92,10 @@ body {
     font-weight: 100;
     font-size: 16px ;
 
+  }
+
+  .card-border{
+    width: 290px;
+    height: 390px;
+    border: 1px solid black;
   }
