--- a/src/styles.css
+++ b/src/styles.css
@@ -99,3 +99,14 @@ body {
     height: 390px;
     border: 1px solid black;
   }
+
+
+  .left-acc{
+    width: 330px;
+    height: 100%;
+    top: 10%;
+    
+  }
+  
+  
+   
